View Issue Details [ Jump to Notes ] [ Print ]
IDProjectCategoryView StatusDate SubmittedLast Update
0015522CMakeCPackpublic2015-04-18 09:292016-06-10 14:31
ReporterStephen Kelly 
Assigned ToKitware Robot 
PrioritynormalSeverityminorReproducibilityhave not tried
StatusclosedResolutionmoved 
PlatformOSOS Version
Product Version 
Target VersionFixed in Version 
Summary0015522: CPack config file ignored if relative
Description
A simple CMakeLists file:

 cmake_minimum_required(VERSION 2.8)
 project(cmaketest CXX)

 set(CPACK_PROJECT_CONFIG_FILE "MyCPack.cmake")
 include(CPack)

The MyCPack.cmake file is not found in the source dir unless I change the line to

 set(CPACK_PROJECT_CONFIG_FILE "${CMAKE_SOURCE_DIR}/MyCPack.cmake")

TagsNo tags attached.
Attached Files

 Relationships

  Notes
(0042761)
Kitware Robot (administrator)
2016-06-10 14:29

Resolving issue as `moved`.

This issue tracker is no longer used. Further discussion of this issue may take place in the current CMake Issues page linked in the banner at the top of this page.

 Issue History
Date Modified Username Field Change
2015-04-18 09:29 Stephen Kelly New Issue
2016-06-10 14:29 Kitware Robot Note Added: 0042761
2016-06-10 14:29 Kitware Robot Status new => resolved
2016-06-10 14:29 Kitware Robot Resolution open => moved
2016-06-10 14:29 Kitware Robot Assigned To => Kitware Robot
2016-06-10 14:31 Kitware Robot Status resolved => closed


Copyright © 2000 - 2018 MantisBT Team