Tests/RunCMake/CPackCommandLine/project_config_example.cmake
@@ -1,0 +1,1 @@
+message(STATUS "project_config_example.cmake is included")
